kubernetes/frontend/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
spec:
  # В кластере может быть несколько Ingress Controllers, мы используем NGINX
  ingressClassName: "nginx"
  tls:
    - hosts:
        - "lisitsin-aleksandr-06.k8s.praktikum-services.tech"
  rules:
    # Хост определяет правило направления траффика по доменному имени
    - host: "lisitsin-aleksandr-06.k8s.praktikum-services.tech"
      http:
        # Для различных путей в URL можно указать различные бэкенд-сервисы
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                # Заранее создан сервис типа ClusterIP
                # Он выступает в качестве бэкенда нашего Ingress
                name: frontend
                port:
                  number: 8080
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 8080
